# moveit

./: index.md
moveit/: package.xml
moveit_setup_assistant/: CMakeLists.txt
moveit_setup_assistant/include/moveit/setup_assistant/tools/: moveit_config_data.h
moveit_setup_assistant/src/: setup_assistant_main.cpp
moveit_setup_assistant/src/tools/: moveit_config_data.cpp
moveit_setup_assistant/src/widgets/: configuration_files_widget.cpp  controller_edit_widget.cpp  controller_edit_widget.h  controllers_widget.cpp  controllers_widget.h  default_collisions_widget.cpp  robot_poses_widget.cpp  robot_poses_widget.h  setup_assistant_widget.cpp  setup_assistant_widget.h  setup_screen_widget.cpp  setup_screen_widget.h  simulation_widget.cpp  simulation_widget.h  start_screen_widget.cpp
moveit_setup_assistant_plugins/: CMakeLists.txt  author_info_plugin_description.xml  package.xml
moveit_setup_assistant_plugins/author_info_plugin/: CMakeLists.txt  author_plugin.cpp  author_plugin.h
